[gd_scene load_steps=7 format=3 uid="uid://bvoohmy3prls2"]

[ext_resource type="Texture2D" uid="uid://e5ghtu88bbgp" path="res://explosion.png" id="1_d0jm8"]
[ext_resource type="Script" path="res://explosionNode.gd" id="1_sprt1"]
[ext_resource type="Texture2D" uid="uid://dkv75ojr8r7ec" path="res://explosion-light.png" id="3_pjj5m"]

[sub_resource type="Animation" id="Animation_p66ax"]
resource_name = "explode"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Area2D/Sprite2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(8, 8), Vector2(10, 10)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Area2D/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [6.28319, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Area2D/Sprite2D:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Area2D/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1.6, 1.6), Vector2(0.2, 0.2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PointLight2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(50, 50), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w8n2a"]
_data = {
"explode": SubResource("Animation_p66ax")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_rhxio"]
radius = 70.0

[node name="Explosion" type="Node2D"]
script = ExtResource("1_sprt1")

[node name="ExplosionPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w8n2a")
}

[node name="Area2D" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Area2D"]
rotation = 6.28319
texture = ExtResource("1_d0jm8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(0.2, 0.2)
shape = SubResource("CircleShape2D_rhxio")

[node name="PointLight2D" type="PointLight2D" parent="."]
texture = ExtResource("3_pjj5m")

[connection signal="animation_finished" from="ExplosionPlayer" to="." method="_on_explosion_player_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
